# shopping-agent

./: .gitignore  README.md  main.py  pyproject.toml  skill.md
app/: __init__.py  config.py  database.py  models.py
app/agent/: __init__.py  shopping_agent.py
app/api/: __init__.py  carts.py  connectors.py  orders.py  products.py  runs.py
app/connectors/: __init__.py  amazon.py  base.py  blinkit.py  swiggy.py  ubereats.py
app/logging/: __init__.py  action_logger.py  run_tracker.py
experiments/: test_amazon_login.py
static/css/: style.css
static/js/: app.js
templates/: base.html  carts.html  connectors.html  dashboard.html  orders.html  runs.html
